--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -2,8 +2,9 @@
 <p-sidebar [(visible)]="sidebarVisible">
   <p-menubar [model]="items"></p-menubar>
 </p-sidebar>
-
-<p-button (click)="sidebarVisible = true" icon="pi pi-bars"></p-button>
+<div>
+  <p-button (click)="sidebarVisible = true" icon="pi pi-bars" label="Menu" styleClass="p-button-rounded p-button-raised p-button-link"></p-button>
+</div>
 
 <div>
   <router-outlet></router-outlet>
