--- a/frontend/src/app/components/operadorform/operadorform.component.html
+++ b/frontend/src/app/components/operadorform/operadorform.component.html
@@ -1,28 +1,42 @@
-<div class="list row">
-    <div class="col-md-6">
-      <h4>Tutorials List</h4>
-      <ul class="list-group">
-        <li
-          class="list-group-item"
-          *ngFor="let tutorial of operadores; let i = index"
-          [class.active]="i == currentIndex"
-          (click)="setActiveOperadores(tutorial, i)"
-        >
-          {{ tutorial.operador }}
-        </li>
-      </ul>
-    </div>
-    <div class="col-md-6">
-      <app-operador 
-      [viewMode]="true"
-      [currentOperadoresI]="currentOperadoresI">
-      </app-operador>
-    </div>
 
-  </div>
+  <div class="card-container mt-2">
+    <div class="card flex justify-content-center">
+        <p-card header="Operadores">
+          <button class="btn btn-primary" [routerLink]="['/operadoradd']">
+            Agregar Nuevo Operador
+          </button>
+            <div style="text-align: center" class="mt-2">
+                <p-table 
+                  [value]="archivos"
+                  [paginator]="true"
+                  [rows]="10"
+                  [columns]="archivos"
+                  class="custom-table">
+                  <ng-template pTemplate="header" let-columns >
+                    <tr class="custom-header">
+                      <th>Id</th>
+                      <th>Operador</th>
+                      <th>Revisar</th>
+                    </tr>
+                  </ng-template>
+                  <ng-template
+                    pTemplate="body"
+                    let-rowData
+                    let-columns="columns">
+                    <tr>
+                      <td>{{rowData.id}}</td>     
+                      <td>{{rowData.operador}}</td>   
+                      <td>
+                        <button class="btn btn-primary">Actualizar</button>
+                      </td>
+                    </tr>
+                  </ng-template>
+                </p-table>
+              </div>
+        </p-card>
+    </div>
+</div>
 
   <div>
-    <p-button class="btn btn-primary" [routerLink]="['/operadoradd']">
-      Agregar Nuevo Operador
-    </p-button>
+    
   </div>
