--- a/frontend/src/app/components/usuarios/usuarios.component.html
+++ b/frontend/src/app/components/usuarios/usuarios.component.html
@@ -1,48 +1,49 @@
-<p>
 
-</p>
-  <div style="text-align: center">
-    <h4>Tabla de Estudiantes Adjuntos a Algún Proyecto</h4>
-
-    <p-table 
-      [value]="usuarios"
-      [paginator]="true"
-      [rows]="10"
-      [columns]="usuarios" 
-      class="custom-table">
-      <ng-template pTemplate="header" let-columns >
-        <tr class="custom-header">
-          <th>Id</th>
-          <th>Estudiante</th>
-          <th>Identificación</th>
-          <th>Email</th>
-          <th>Telefono</th>
-          <th>Facultad</th>
-          <th>Programa</th>
-          <th>Semestre</th>
-          <th>Tipo de Estudiante</th>
-          <th>Grupo de Investigación</th>
-          <th>Semillero</th>
-        </tr>
-      </ng-template>
-      <ng-template
-        pTemplate="body"
-        let-rowData
-        let-columns="columns">
-        <tr>
-          <td>{{rowData.id}}</td>
-          <td>{{rowData.usuario}}</td>
-          <td>{{rowData.identificacion}}</td>
-          <td>{{rowData.email}}</td>
-          <td>{{rowData.telefono}}</td>
-          <td>{{rowData.programa}}</td>
-          <td>{{rowData.semestre}}</td>
-          <td>{{rowData.tipoestudianteid}}</td>
-          <td>{{rowData.facultadid}}</td>
-          <td>{{rowData.grupoinvestigacionid}}</td>
-          <td>{{rowData.semilleroinvestigacionid}}</td>
-        </tr>
-      </ng-template>
-    </p-table>
-  </div>
-  
+  <div class="card-container mt-2">
+    <div class="card flex justify-content-center">
+        <p-card header="Tabla de Estudiantes Adjuntos a Algún Proyecto">
+            <div style="text-align: center">
+              <p-table 
+              [value]="usuarios"
+              [paginator]="true"
+              [rows]="10"
+              [columns]="usuarios" 
+              class="custom-table">
+              <ng-template pTemplate="header" let-columns >
+                <tr class="custom-header">
+                  <th>Id</th>
+                  <th>Estudiante</th>
+                  <th>Identificación</th>
+                  <th>Email</th>
+                  <th>Telefono</th>
+                  <th>Facultad</th>
+                  <th>Programa</th>
+                  <th>Semestre</th>
+                  <th>Tipo de Estudiante</th>
+                  <th>Grupo de Investigación</th>
+                  <th>Semillero</th>
+                </tr>
+              </ng-template>
+              <ng-template
+                pTemplate="body"
+                let-rowData
+                let-columns="columns">
+                <tr>
+                  <td>{{rowData.id}}</td>
+                  <td>{{rowData.usuario}}</td>
+                  <td>{{rowData.identificacion}}</td>
+                  <td>{{rowData.email}}</td>
+                  <td>{{rowData.telefono}}</td>
+                  <td>{{rowData.programa}}</td>
+                  <td>{{rowData.semestre}}</td>
+                  <td>{{rowData.tipoestudianteid}}</td>
+                  <td>{{rowData.facultadid}}</td>
+                  <td>{{rowData.grupoinvestigacionid}}</td>
+                  <td>{{rowData.semilleroinvestigacionid}}</td>
+                </tr>
+              </ng-template>
+            </p-table>
+            </div>
+        </p-card>
+    </div>
+</div>
