--- a/frontend/src/app/components/proyectos/proyectos.component.html
+++ b/frontend/src/app/components/proyectos/proyectos.component.html
@@ -1,42 +1,46 @@
 
 
-<div style="text-align: center">
-  <h4>Listado de Proyectos</h4>
-
-  <p-table 
-    [value]="proyectos"
-    [paginator]="true"
-    [rows]="10"
-    [columns]="proyectos"
-    class="custom-table">
-    <ng-template pTemplate="header" let-columns >
-      <tr class="custom-header">
-        <th>Id</th>
-        <th>Proyecto</th>
-        <th>Codigo</th>
-        <th>Plazo</th>
-        <th>Rol Universidad</th>
-        <th>Fecha de inicio</th>
-        <th>Fecha de fin</th>
-        <th>Visualizar</th>
-      </tr>
-    </ng-template>
-    <ng-template
-      pTemplate="body"
-      let-rowData
-      let-columns="columns">
-      <tr>
-        <td>{{rowData.id}}</td>        
-        <td>{{rowData.proyecto}}</td>
-        <td>{{rowData.codigo}}</td>
-        <td>{{rowData.plazo}}</td>
-        <td>{{rowData.roluniversidadid}}</td>
-        <td>{{rowData.fechai}}</td>
-        <td>{{rowData.fechaf}}</td>
-        <td>
-          <p-button label="Ver Detalles" icon="pi pi-eye" routerLink="/seguimientos"></p-button>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+<div class="card-container mt-2">
+  <div class="card flex justify-content-center">
+      <p-card header="Proyectos">
+          <div style="text-align: center">
+            <p-table 
+            [value]="proyectos"
+            [paginator]="true"
+            [rows]="10"
+            [columns]="proyectos"
+            class="custom-table">
+            <ng-template pTemplate="header" let-columns >
+              <tr class="custom-header">
+                <th>Id</th>
+                <th>Proyecto</th>
+                <th>Codigo</th>
+                <th>Plazo</th>
+                <th>Rol Universidad</th>
+                <th>Fecha de inicio</th>
+                <th>Fecha de fin</th>
+                <th>Visualizar</th>
+              </tr>
+            </ng-template>
+            <ng-template
+              pTemplate="body"
+              let-rowData
+              let-columns="columns">
+              <tr>
+                <td>{{rowData.id}}</td>        
+                <td>{{rowData.proyecto}}</td>
+                <td>{{rowData.codigo}}</td>
+                <td>{{rowData.plazo}}</td>
+                <td>{{rowData.roluniversidadid}}</td>
+                <td>{{rowData.fechai}}</td>
+                <td>{{rowData.fechaf}}</td>
+                <td>
+                  <p-button label="Ver Detalles" icon="pi pi-eye" routerLink="/seguimientos"></p-button>
+                </td>
+              </tr>
+            </ng-template>
+          </p-table>
+        </div>
+      </p-card>
+  </div>
 </div>
