--- a/frontend/src/app/components/proyectos/proyectos.component.html
+++ b/frontend/src/app/components/proyectos/proyectos.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="card-container mt-2">
+<div class="card-container m-4">
   <div class="card flex justify-content-center">
       <p-card header="Proyectos">
           <div style="text-align: center">
