--- a/frontend/src/app/components/entidadfform/entidadfform.component.html
+++ b/frontend/src/app/components/entidadfform/entidadfform.component.html
@@ -27,7 +27,7 @@
                       <td>{{rowData.id}}</td>     
                       <td>{{rowData.entidadfinanciadora}}</td>   
                       <td>
-                        <!--<a [routerLink]="'/entidadf/' + rowData.id" class="btn btn-primary">Acciones</a>-->
+                        <a [routerLink]="'/entidadf/' + rowData.id" class="btn btn-primary">Acciones</a>
                       </td>
                     </tr>
                   </ng-template>
@@ -36,7 +36,3 @@
         </p-card>
     </div>
 </div>
-
-  <div>
-    
-  </div>
