--- a/frontend/src/app/components/rol-u/rol-u.component.html
+++ b/frontend/src/app/components/rol-u/rol-u.component.html
@@ -47,7 +47,8 @@
               >
                 Actualizar
               </button>
-            
+              <button class="btn btn-success m-2" [routerLink]="['/roluform']">Cancelar</button>
+              
               <p>{{ message }}</p>
             </div>
           </p-card>
