--- a/frontend/src/app/components/tipoarchivo/tipoarchivo.component.html
+++ b/frontend/src/app/components/tipoarchivo/tipoarchivo.component.html
@@ -1,1 +1,68 @@
-<p>tipoarchivo works!</p>
+<div *ngIf="viewMode; else editable">
+    <div *ngIf="currentTipoarchivoI.id">
+      <h4>Tipo de Archivo</h4>
+      <div>
+        <label><strong>Tipo de Archivo:</strong></label> {{ currentTipoarchivoI.nombre_archivo }}
+      </div>
+  
+      <a
+        class="badge badge-warning"
+        routerLink="/tipoarchivo/{{ currentTipoarchivoI.id }}"
+      >
+        Edit
+      </a>
+    </div>
+  
+    <div *ngIf="!currentTipoarchivoI">
+      <br />
+      <p>Please click on a Archive Name...</p>
+    </div>
+  </div>
+  
+  <ng-template #editable>
+    <div class="card-container m-2">
+      <div class="card flex justify-content-center">
+          <p-card header="Tipo de Archivo">
+
+            <div *ngIf="currentTipoarchivoI.id" class="edit-form">
+              <form>
+                <div class="form-group">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="title"
+                    [(ngModel)]="currentTipoarchivoI.nombre_archivo"
+                    name="title"
+                  />
+                </div>
+        
+              </form>
+              <button class="btn btn-danger m-2" (click)="deleteTipoarchivo()">
+                Eliminar
+              </button>
+          
+              <button
+                type="submit"
+                class="btn btn-primary m-2"
+                (click)="updateTipoarchivo()"
+              >
+                Actualizar
+              </button>
+              <button class="btn btn-success m-2" [routerLink]="['/tipoarchivoform']">Cancelar</button>
+              
+              <p>{{ message }}</p>
+            </div>
+          </p-card>
+      </div>
+    </div>
+    
+    
+  
+    <div *ngIf="!currentTipoarchivoI.id">
+      <br />
+      
+      <h1><strong>Este Tipo de Archivo no existe...</strong></h1>
+      <button class="btn btn-primary m-2" [routerLink]="['/tipoarchivoadd']">Agregar uno Nuevo</button>
+
+    </div>
+  </ng-template>
