--- a/frontend/src/app/components/archivo/archivo.component.html
+++ b/frontend/src/app/components/archivo/archivo.component.html
@@ -1,7 +1,5 @@
-<p>
-    
-</p>
-<div class="card-container">
+
+<div class="card-container m-2">
     <div class="card flex justify-content-center">
         <p-card header="Archivos">
             <div style="text-align: center">
