--- a/frontend/src/app/components/archivoform/archivoform.component.html
+++ b/frontend/src/app/components/archivoform/archivoform.component.html
@@ -1,45 +1,90 @@
-
 <div class="card-container m-2">
-    <div class="card flex justify-content-center">
-        <p-card header="Archivos">
-          <button class="btn btn-primary" [routerLink]="['/archivoadd']">
-            Agregar Nuevo Archivo
-          </button>
-            <div style="text-align: center" class="mt-2">
-                <p-table 
-                  [value]="archivos"
-                  [paginator]="true"
-                  [rows]="10"
-                  [columns]="archivos"
-                  class="custom-table">
-                  <ng-template pTemplate="header" let-columns >
-                    <tr class="custom-header">
-                      <th>Id</th>
-                      <th>Tipo de Archivo</th>
-                      <th>Nombre del Archivo</th>
-                      <th>Proyecto</th>
-                      <th>Revisar</th>
-                    </tr>
-                  </ng-template>
-                  <ng-template
-                    pTemplate="body"
-                    let-rowData
-                    let-columns="columns">
-                    <tr>
-                      <td>{{rowData.id}}</td>     
-                      <td>{{rowData.nombre_archivo_id}}</td>   
-                      <td>
-                        
-                        <a href="{{ rowData.archivo }}" target="_blank"><span class="pi pi-file"></span> {{ rowData.archivo.split('/').pop() }}</a>
-                      </td>   
-                      <td>{{rowData.proyectoid}}</td>   
-                      <td>
-                        <a [routerLink]="'/archivos/' + rowData.id" class="btn btn-primary">Acciones</a>
-                      </td>
-                    </tr>
-                  </ng-template>
-                </p-table>
-              </div>
-        </p-card>
-    </div>
+  <div class="card flex justify-content-center">
+
+    <p-button (click)="showDialog()" icon="pi pi-external-link" label="Subir Nuevo Archivo" class="p-button-circle" styleClass="p-button-raised p-button-rounded p-button-circle m-2"></p-button>
+    <p-card header="Archivos">
+      <button class="btn btn-primary" [routerLink]="['/archivoadd']">
+        Agregar Nuevo Archivo
+      </button>
+      <div style="text-align: center" class="mt-2">
+        <p-table [value]="archivos" [paginator]="true" [rows]="10" [columns]="archivos" class="custom-table">
+          <ng-template pTemplate="header" let-columns>
+            <tr class="custom-header">
+              <th>Id</th>
+              <th>Tipo de Archivo</th>
+              <th>Nombre del Archivo</th>
+              <th>Proyecto</th>
+              <th>Revisar</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-rowData let-columns="columns">
+            <tr>
+              <td>{{rowData.id}}</td>
+              <td>{{rowData.nombre_archivo_id}}</td>
+              <td>
+
+                <a href="{{ rowData.archivo }}" target="_blank"><span class="pi pi-file"></span> {{
+                  rowData.archivo.split('/').pop() }}</a>
+              </td>
+              <td>{{rowData.proyectoid}}</td>
+              <td>
+                <a [routerLink]="'/archivos/' + rowData.id" class="btn btn-primary">Acciones</a>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </p-card>
+  </div>
 </div>
+
+<p-dialog header="Header" [(visible)]="visible" [style]="{width: '50vw'}">
+  <h3> Nuevo archivo</h3>
+  <div>
+    <div class="container">
+      <h2>Agregar Archivo</h2>
+      <form (ngSubmit)="saveArchivo()" #archivoForm="ngForm" enctype="multipart/form-data">
+
+        <p-card header="Seleccione el documento relacionado:" [style]="{ width: '100%' }" class="m-2">
+          <ng-template pTemplate="header">
+          </ng-template>
+          <p>
+            <p-dropdown id="nombresArchivos" name="nombresArchivos" [(ngModel)]="archivosCrear.nombre_archivo_id"
+              [options]="nombresArchivos" optionLabel="nombre_archivo" optionValue="id"
+              placeholder="Seleccionar"></p-dropdown>
+          </p>
+          <ng-template pTemplate="footer">
+            <!--<p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{ 'margin-left': '.5em' }"></p-button>-->
+          </ng-template>
+        </p-card>
+
+        <div class="form-group">
+          <label for="archivo">Archivo:</label>
+          <p-fileUpload name="archivo" (onSelect)="onFileSelect($event)" [maxFileSize]="1000000"
+            [customUpload]="true"></p-fileUpload>
+
+        </div>
+
+        <div class="form-group mt-2" style=" width: 100%">
+
+          <p-card header="Seleccione proyecto al cual cargar el documento" [style]="{ width: '100%' }" class="m-2">
+            <ng-template pTemplate="header">
+            </ng-template>
+            <p>
+            </p>
+            <p>
+              <p-dropdown id="proyecto" name="proyecto" [(ngModel)]="archivosCrear.proyectoid" [options]="proyectos"
+                optionLabel="proyecto" placeholder="Seleccionar" optionValue="id"></p-dropdown>
+            </p>
+            <ng-template pTemplate="footer">
+              <!--<p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{ 'margin-left': '.5em' }"></p-button>-->
+            </ng-template>
+          </p-card>
+        </div>
+
+        <button type="submit" pButton class="p-button-primary" label="Guardar"></button>
+      </form>
+    </div>
+  </div>
+</p-dialog>
+<p-toast [style]="{ top: '80px'}"></p-toast>
