--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -3,7 +3,7 @@
   <p-menubar [model]="items"></p-menubar>
 </p-sidebar>
 <div>
-  <p-button (click)="sidebarVisible = true" icon="pi pi-bars" label="Menu" styleClass="p-button-rounded p-button-raised p-button-link"></p-button>
+  <p-button (click)="sidebarVisible = true" icon="pi pi-bars" label="Menu" styleClass="p-button-raised p-button-link"></p-button>
 </div>
 
 <div>
