--- a/frontend/src/app/components/archivoform/archivoform.component.html
+++ b/frontend/src/app/components/archivoform/archivoform.component.html
@@ -1,48 +1,48 @@
 <div class="card-container m-2">
   <div class="card flex justify-content-center">
 
-    <p-button (click)="showDialog()" icon="pi pi-external-link" label="Subir Nuevo Archivo" class="p-button-circle" styleClass="p-button-raised p-button-rounded p-button-circle m-2"></p-button>
-    <p-card header="Archivos">
-      <button class="btn btn-primary" [routerLink]="['/archivoadd']">
-        Agregar Nuevo Archivo
-      </button>
-      <div style="text-align: center" class="mt-2">
-        <p-table [value]="archivos" [paginator]="true" [rows]="10" [columns]="archivos" class="custom-table">
-          <ng-template pTemplate="header" let-columns>
-            <tr class="custom-header">
-              <th>Id</th>
-              <th>Tipo de Archivo</th>
-              <th>Nombre del Archivo</th>
-              <th>Proyecto</th>
-              <th>Revisar</th>
-            </tr>
-          </ng-template>
-          <ng-template pTemplate="body" let-rowData let-columns="columns">
-            <tr>
-              <td>{{rowData.id}}</td>
-              <td>{{rowData.nombre_archivo_id}}</td>
-              <td>
+    <br>
 
-                <a href="{{ rowData.archivo }}" target="_blank"><span class="pi pi-file"></span> {{
-                  rowData.archivo.split('/').pop() }}</a>
-              </td>
-              <td>{{rowData.proyectoid}}</td>
-              <td>
-                <a [routerLink]="'/archivos/' + rowData.id" class="btn btn-primary">Acciones</a>
-              </td>
-            </tr>
-          </ng-template>
-        </p-table>
-      </div>
-    </p-card>
+    <button pButton (click)="showDialog()" icon="pi pi-plus" label="Subir Nuevo Archivo"
+      class="p-button-primary m-2 p-button-outlined boton-redondo"></button>
+    <br>
+    <p-table [value]="archivos" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 20]" class="p-datatable-striped custom-table">
+      <ng-template pTemplate="header" let-columns>
+        <tr>
+          <th>#</th>
+          <th pSortableColumn="nombre_archivo_id">Tipo de Archivo <p-sortIcon field="nombre_archivo_id"></p-sortIcon>
+          </th>
+          <th pSortableColumn="archivo">Nombre del Archivo <p-sortIcon field="archivo"></p-sortIcon></th>
+          <th pSortableColumn="proyectoid">Proyecto <p-sortIcon field="proyectoid"></p-sortIcon></th>
+          <th>Acciones</th>
+        </tr>
+      </ng-template>
+      <ng-template pTemplate="body" let-rowData let-rowIndex="rowIndex">
+        <tr>
+          <td>{{ rowIndex + 1 }}</td>
+          <td>{{ obtenerNombresArchivos(rowData.nombre_archivo_id) }}</td>
+          <td class="file-cell">
+            <a [href]="rowData.archivo" target="_blank" class="file-link">
+              <span class="pi pi-file"></span> {{ getFileName(rowData.archivo) }}
+            </a>
+          </td>
+          <td>{{ obtenerNombresProyectos(rowData.proyectoid) }}</td>
+          <td>
+            <button pButton type="button" label="Editar" icon="pi pi-pencil" class="p-button-warning p-button-outlined boton-redondo"
+              (click)="editArchivo(rowData)"></button>
+          </td>
+        </tr>
+      </ng-template>
+    </p-table>
+
   </div>
 </div>
 
-<p-dialog header="Header" [(visible)]="visible" [style]="{width: '50vw'}">
-  <h3> Nuevo archivo</h3>
+<!-- AGREGAR ARCHIVO -->
+
+<p-dialog header="Agregar un Nuevo Archivo" [(visible)]="visible" [style]="{width: '50vw'}">
   <div>
     <div class="container">
-      <h2>Agregar Archivo</h2>
       <form (ngSubmit)="saveArchivo()" #archivoForm="ngForm" enctype="multipart/form-data">
 
         <p-card header="Seleccione el documento relacionado:" [style]="{ width: '100%' }" class="m-2">
@@ -60,8 +60,10 @@
 
         <div class="form-group">
           <label for="archivo">Archivo:</label>
-          <p-fileUpload name="archivo" (onSelect)="onFileSelect($event)" [maxFileSize]="1000000"
-            [customUpload]="true"></p-fileUpload>
+          <p-fileUpload name="archivo" (onSelect)="onFileSelect($event)" [maxFileSize]="1000000" [customUpload]="true">
+          </p-fileUpload>
+          <label>Archivo cargado: </label>
+          <p>{{ archivoNombre }}</p>
 
         </div>
 
@@ -87,4 +89,6 @@
     </div>
   </div>
 </p-dialog>
+
+
 <p-toast [style]="{ top: '80px'}"></p-toast>
