--- a/frontend/src/app/components/proyectos/proyectos.component.html
+++ b/frontend/src/app/components/proyectos/proyectos.component.html
@@ -1,55 +1,129 @@
-
-
 <div class="card-container m-4">
   <div class="card flex justify-content-center">
-      <p-card header="Proyectos">
-          <div style="text-align: center">
-            <p-table 
-            [value]="pro"
-            [paginator]="true"
-            [rows]="5"
-            [rowsPerPageOptions]="[5, 10, 20]"
-            [columns]="pro"
-            class="custom-table">
-            <ng-template pTemplate="header" let-columns >
-              <tr class="custom-header">
-                <th>Id</th>
-                <th pSortableColumn="proyecto">Proyecto<p-sortIcon field="proyecto"></p-sortIcon></th>
-                <th>Codigo</th>
-                <th pSortableColumn="plazo">Plazo<p-sortIcon field="plazo"></p-sortIcon></th>
-                <th>Rol Universidad</th>
-                <th>Fecha de inicio</th>
-                <th>Fecha de fin</th>
-                <th>Convocatoria</th>
-                <th>Operador</th>
-                <th>Entidad Financiadora</th>
-                <th>Grupo de Investigación</th>
-                <th>Detalles</th>
-              </tr>
-            </ng-template>  
-            <ng-template
-              pTemplate="body"
-              let-rowData
-              let-rowIndex="rowIndex">
-              <tr>
-                <td>{{rowIndex + 1 }}</td>     
-                <td>{{rowData.proyecto}}</td>
-                <td>{{rowData.codigo}}</td>
-                <td>{{rowData.plazo}}</td>
-                <td>{{ obtenerRolU(rowData.roluniversidadid) }}</td>
-                <td>{{rowData.fechai}}</td>
-                <td>{{rowData.fechaf}}</td>
-                <td>{{ obtenerConvocatoriaNombre(rowData.convocatoriaid) }}</td>
-                <td>{{ obtenerOperadorNombre(rowData.operadorid) }}</td>
-                <td>{{ obtenerEntidadF(rowData.entidadfinanciadora) }}</td>
-                <td>{{ obtenerGrupoI(rowData.grupoinvestigacionid) }}</td>
-                <td>
-                  <button pButton type="button" label="Ver Detalles" icon="pi pi-eye" class="p-button-warning p-button-outlined boton-redondo" routerLink="/seguimientos"></button>
-                </td>
-              </tr>
-            </ng-template>
-          </p-table>
-        </div>
-      </p-card>
+    <button pButton type="button" label="Agregar Proyecto" icon="pi pi-plus"
+      class="p-button-primary m-2 p-button-outlined boton-redondo" (click)="showDialog()"></button>
+    <p-card header="Proyectos">
+      <div style="text-align: center">
+        <p-table [value]="pro" [paginator]="true" [rows]="5" [rowsPerPageOptions]="[5, 10, 20]" [columns]="pro"
+          class="custom-table">
+          <ng-template pTemplate="header" let-columns>
+            <tr class="custom-header">
+              <th>Id</th>
+              <th pSortableColumn="proyecto">Proyecto<p-sortIcon field="proyecto"></p-sortIcon></th>
+              <th>Codigo</th>
+              <th pSortableColumn="plazo">Plazo<p-sortIcon field="plazo"></p-sortIcon></th>
+              <th>Rol Universidad</th>
+              <th>Fecha de inicio</th>
+              <th>Fecha de fin</th>
+              <th>Convocatoria</th>
+              <th>Operador</th>
+              <th>Entidad Financiadora</th>
+              <th>Grupo de Investigación</th>
+              <th>Detalles</th>
+            </tr>
+          </ng-template>
+          <ng-template pTemplate="body" let-rowData let-rowIndex="rowIndex">
+            <tr>
+              <td>{{rowIndex + 1 }}</td>
+              <td>{{rowData.proyecto}}</td>
+              <td>{{rowData.codigo}}</td>
+              <td>{{rowData.plazo}}</td>
+              <td>{{ obtenerRolU(rowData.roluniversidadid) }}</td>
+              <td>{{rowData.fechai}}</td>
+              <td>{{rowData.fechaf}}</td>
+              <td>{{ obtenerConvocatoriaNombre(rowData.convocatoriaid) }}</td>
+              <td>{{ obtenerOperadorNombre(rowData.operadorid) }}</td>
+              <td>{{ obtenerEntidadF(rowData.entidadfinanciadora) }}</td>
+              <td>{{ obtenerGrupoI(rowData.grupoinvestigacionid) }}</td>
+              <td>
+                <button pButton class="p-button-warning p-button-outlined boton-redondo" label="Editar"
+                  icon="pi pi-pencil" (click)="editProyecto(rowData, rowIndex)"></button>
+              </td>
+            </tr>
+          </ng-template>
+        </p-table>
+      </div>
+    </p-card>
   </div>
 </div>
+
+<p-dialog header="{{ editingProyecto ? 'Editar Proyecto' : 'Crear Proyecto' }}" [(visible)]="visible" [modal]="true"
+  [responsive]="true" [style]="{width: '80%'}">
+  <div>
+    <form (ngSubmit)="crearProyecto()" class="form-container">
+      <div class="form-field">
+        <label for="proyecto">Nombre del Proyecto</label>
+        <input type="text" id="proyecto" [(ngModel)]="editMode ? editingProyecto.proyecto : crearProyectosI.proyecto"
+          name="proyecto" required class="input-field">
+      </div>
+
+      <div class="form-field">
+        <label for="codigo">Código del Proyecto</label>
+        <input type="text" id="codigo" [(ngModel)]="editMode ? editingProyecto.codigo : crearProyectosI.codigo" name="codigo" required class="input-field">
+      </div>
+      
+      <div class="form-field">
+        <label for="plazo">Plazo</label>
+        <input type="number" id="plazo" [(ngModel)]="editMode ? editingProyecto.plazo : crearProyectosI.plazo" name="plazo" required class="input-field">
+      </div>
+      
+      <div class="form-field">
+        <label for="fechai">Fecha de Inicio</label>
+        <input type="date" id="fechai" [(ngModel)]="editMode ? editingProyecto.fechai : crearProyectosI.fechai" name="fechai" required class="input-field">
+      </div>
+      
+      <div class="form-field">
+        <label for="fechaf">Fecha de Fin</label>
+        <input type="date" id="fechaf" [(ngModel)]="editMode ? editingProyecto.fechaf : crearProyectosI.fechaf" name="fechaf" required class="input-field">
+      </div>
+
+      <div class="form-field">
+        <label for="convocatoria">Convocatoria</label>
+        <select id="convocatoria" [(ngModel)]="editMode ? editingProyecto.convocatoriaid : crearProyectosI.convocatoriaid" name="convocatoria" required
+          class="input-field">
+          <option *ngFor="let convocatoria of convocatoriaNombre" [value]="convocatoria.id">{{ convocatoria.convocatoria
+            }}</option>
+        </select>
+      </div>
+
+      <div class="form-field">
+        <label for="rolUniversidad">Rol Universidad</label>
+        <select id="rolUniversidad" [(ngModel)]="editMode ? editingProyecto.roluniversidadid : crearProyectosI.roluniversidadid" name="rolUniversidad" required
+          class="input-field">
+          <option *ngFor="let rol of rolU" [value]="rol.id">{{ rol.rolU }}</option>
+        </select>
+      </div>
+
+      <div class="form-field">
+        <label for="operador">Operador</label>
+        <select id="operador" [(ngModel)]="editMode ? editingProyecto.operadorid : crearProyectosI.operadorid" name="operador" required class="input-field">
+          <option *ngFor="let operador of operadorNombre" [value]="operador.id">{{ operador.operador }}</option>
+        </select>
+      </div>
+
+      <div class="form-field">
+        <label for="entidadFinanciadora">Entidad Financiadora</label>
+        <select id="entidadFinanciadora" [(ngModel)]="editMode ? editingProyecto.entidadfinanciadora : crearProyectosI.entidadfinanciadora" name="entidadFinanciadora"
+          required class="input-field">
+          <option *ngFor="let entidad of entidadFNombre" [value]="entidad.id">{{ entidad.entidadfinanciadora }}</option>
+        </select>
+      </div>
+
+      <div class="form-field">
+        <label for="grupoInvestigacion">Grupo de Investigación</label>
+        <select id="grupoInvestigacion" [(ngModel)]="editMode ? editingProyecto.grupoinvestigacionid : crearProyectosI.grupoinvestigacionid" name="grupoInvestigacion"
+          required class="input-field">
+          <option *ngFor="let grupo of grupoINombre" [value]="grupo.id">{{ grupo.grupoinvestigacion }}</option>
+        </select>
+      </div>
+
+      <div class="form-actions">
+        <button pButton type="submit" label="{{ editingProyecto ? 'Guardar' : 'Crear' }}"
+          class="boton-redondo p-button-outlined p-button-primary mr-2"></button>
+        <button pButton type="button" label="Cancelar" class="p-button-danger boton-redondo p-button-outlined"
+          (click)="cancelEdit()"></button>
+      </div>
+    </form>
+
+  </div>
+</p-dialog>
